[QuangVV - 2024-03-28]  Update gitignore, Order History Page,Feedback List in Product Detail Page

--- a/WebApp/Views/Customer/Profile.cshtml
+++ b/WebApp/Views/Customer/Profile.cshtml
@@ -13,9 +13,10 @@
                             <div class="p-4">
                                 <div class="nav flex-column nav-pills">
                                     <a class="nav-link active text-white" asp-action="Profile" style="background-color: #FEA116!important;">
-                                        <i class="bi bi-person me-2"></i> Information
+                                        <i class="fa fa-user me-2"></i> Information
                                     </a>
-                                    <a class="nav-link text-black" asp-action="ChangePassword"><i class="bi bi-lock me-2"></i>Security</a>
+                                    <a class="nav-link text-black" asp-action="ChangePassword"><i class="fa fa-lock me-2"></i> Security</a>
+                                    <a class="nav-link text-black" asp-action="OrderHistory"><i class="fa fa-truck-fast me-2"></i> Order History</a>
                                 </div>
                             </div>
                         </div>
