--- a/WebApp/Views/Customer/ChangePassword.cshtml
+++ b/WebApp/Views/Customer/ChangePassword.cshtml
@@ -10,10 +10,11 @@
                         <div class="col-lg-3 border-end">
                             <div class="p-4">
                                 <div class="nav flex-column nav-pills">
-                                    <a class="nav-link text-black" asp-action="Profile"> <i class="bi bi-person me-2"></i> Information </a>
+                                    <a class="nav-link text-black" asp-action="Profile"> <i class="fa fa-user me-2"></i> Information </a>
                                     <a class="nav-link  active text-white" asp-action="ChangePassword" style="background-color: #FEA116 !important;">
-                                        <i class="bi bi-lock me-2"></i>Security
+                                        <i class="fa fa-lock me-2"></i> Security
                                     </a>
+                                    <a class="nav-link text-black" asp-action="OrderHistory"><i class="fa fa-truck-fast me-2"></i> Order History</a>
                                 </div>
                             </div>
                         </div>
