[QuangVV - 2024-03-28]  Update Feedback Customer UI, Feedback Admin UI

--- a/WebApp/Views/Admin/ProductList.cshtml
+++ b/WebApp/Views/Admin/ProductList.cshtml
@@ -16,6 +16,8 @@
                 <th>Name</th>
                 <th>Price</th>
                 <th>Category</th>
+                <th>Feedback</th>
+                <th>Number of feedback</th>
                 <th>Actions</th>
             </tr>
         </thead>
