[QuangVV - 2024-03-29]  Update CreateAt to Feedback entity

--- a/WebApp/Views/Admin/ViewProductFeedback.cshtml
+++ b/WebApp/Views/Admin/ViewProductFeedback.cshtml
@@ -79,7 +79,7 @@
                                             }
                                         </div>
                                     </div>
-                                    <small class="text-muted">2025/03/28</small>
+                                    <small class="text-muted">@feedback.CreatedAt.ToString("yyyy/MM/dd")</small>
                                 </div>
                                 <p class="mt-2">@feedback.FeedbackContent</p>
 
