--- a/WebApp/Views/Shared/_Feedback.cshtml
+++ b/WebApp/Views/Shared/_Feedback.cshtml
@@ -37,7 +37,7 @@
                         <textarea class="review-text form-control" name="feedbackContent"
                                   placeholder="Please share what you like about this product with other buyers."></textarea>
                         <div class="upload-section mt-3">
-                            <input type="file" name="Images" id="imageInput" multiple accept="image/*" style="display: none;" />
+                            <input type="file" name="images" id="imageInput" multiple accept="image/*" style="display: none;" />
                             <button type="button" class="btn btn-outline-danger" id="addImageBtn" style="margin-bottom:16px;">
                                 📷 Add Image
                             </button>
